<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/color_principal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/titulo_consultar_compras"
            android:textColor="@color/white"
            android:textSize="40sp"/>
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkbox_fechas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultar_por_fechas"
        android:textColor="@color/color_texto"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:textSize="32sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_fecha_desde"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/fecha_desde"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:layout_marginRight="35dp"
            android:background="@drawable/boton_redondeado_verde"/>

        <Button
            android:id="@+id/btn_fecha_hasta"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/fecha_hasta"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:background="@drawable/boton_redondeado_verde"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkbox_todas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultar_todas"
        android:textColor="@color/color_texto"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:textSize="32sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancelar_consulta"
            android:layout_width="190dp"
            android:layout_height="75dp"
            android:text="@string/btn_cancelar"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:layout_marginRight="150dp"
            android:backgroundTint="@color/color_btn_cancelar"/>

        <Button
            android:id="@+id/btn_consultar_compra"
            android:layout_width="190dp"
            android:layout_height="75dp"
            android:text="@string/btn_consultar"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:backgroundTint="@color/color_principal"/>

    </LinearLayout>

</LinearLayout>