<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.view.RealizarCompra">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/color_principal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/titulo_consultar_productos_compra"
            android:textColor="@color/white"
            android:textSize="40sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_compra"
            android:textColor="@color/color_texto"
            android:textSize="22sp"
            android:layout_marginRight="120dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="35dp"/>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:drawableLeft="@drawable/search"
                android:drawablePadding="10dp"
                android:layout_marginLeft="430dp"
                android:layout_marginTop="15dp"
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:hint="@string/textholder_buscar_producto"/>

        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1,2,3"
            android:layout_margin="8dp">

            <TableRow>
                <TextView
                    android:text="@string/col_tabla_codigo"
                    android:textSize="21sp"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textColor="@color/color_texto"
                    android:textStyle="bold"
                    android:layout_column="1"/>

                <TextView
                    android:text="@string/col_nombre"
                    android:textSize="21sp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/color_texto"
                    android:textStyle="bold"
                    android:layout_column="1"/>

                <TextView
                    android:text="@string/col_precio_unitario"
                    android:textSize="21sp"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textColor="@color/color_texto"
                    android:textStyle="bold"
                    android:layout_column="1"/>

            </TableRow>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewConsultarProductosCompras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

        </TableLayout>
    </LinearLayout>
</LinearLayout>


