<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.view.RealizarCompra">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/color_principal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/titulo_consultar_compras"
            android:textColor="@color/white"
            android:textSize="40sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compras_consultadas_por"
            android:textColor="@color/color_texto"
            android:textSize="22sp"
            android:layout_marginRight="120dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="35dp"/>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:drawableLeft="@drawable/search"
                android:drawablePadding="10dp"
                android:layout_marginLeft="330dp"
                android:layout_marginTop="15dp"
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:hint="@string/textholder_buscar_producto"/>

        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="1,2,3,4"
                android:layout_margin="8dp">

                <TableRow>
                    <TextView
                        android:text="@string/col_tabla_codigo"
                        android:textSize="21sp"
                        android:padding="5dp"
                        android:gravity="center"
                        android:textColor="@color/color_texto"
                        android:textStyle="bold"
                        android:layout_column="1"/>

                    <TextView
                        android:text="@string/col_tabla_fecha"
                        android:textSize="21sp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textColor="@color/color_texto"
                        android:textStyle="bold"
                        android:layout_column="1"/>

                    <TextView
                        android:text="@string/col_tabla_cant_productos"
                        android:textSize="21sp"
                        android:padding="5dp"
                        android:gravity="center"
                        android:textColor="@color/color_texto"
                        android:textStyle="bold"
                        android:layout_column="1"/>

                    <TextView
                        android:text="@string/col_tabla_total"
                        android:textSize="21sp"
                        android:padding="5dp"
                        android:gravity="center"
                        android:textColor="@color/color_texto"
                        android:textStyle="bold"
                        android:layout_column="1"/>
                </TableRow>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewConsultarCompras"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                </androidx.recyclerview.widget.RecyclerView>


            </TableLayout>


        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:textSize="16sp"
                    android:text="@string/col_nombre"/>

                <TextView
                    android:layout_marginHorizontal="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:textSize="16sp"
                    android:text="@string/col_cantidad"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:textSize="16sp"
                    android:text="@string/col_total"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="5">


            </androidx.recyclerview.widget.RecyclerView>



            <LinearLayout
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="80dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="20dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/color_texto"
                        android:text="@string/subTotal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"

                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/color_texto"
                        android:text="@string/Total"/>


                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="80dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="50dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/color_texto"
                        android:text="14.00"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/color_texto"
                        android:text="14.00"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>