<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.view.RealizarCompra">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/color_principal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/titulo_realizar_compra"
            android:textColor="@color/white"
            android:textSize="40sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_productos_agregados"
        android:textColor="@color/color_texto"
        android:textSize="22sp"
        android:layout_marginRight="120dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="35dp"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_eliminar_producto"
            android:textAllCaps="false"
            android:textSize="19sp"
            android:textStyle="bold"
            android:fontFamily="@font/segoe_ui"
            android:backgroundTint="@color/color_btn_cancelar"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:drawableLeft="@drawable/search"
                android:drawablePadding="10dp"
                android:layout_marginTop="15dp"
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:hint="@string/textholder_buscar_producto"/>

        </LinearLayout>


    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginLeft="15dp"
            android:id="@+id/recyclerViewProductosCompraStock"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">


            <Button
                android:id="@+id/btn_agregar_producto"
                android:layout_width="210dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:textSize="17sp"
                android:text="@string/btn_agregar_producto"
                android:backgroundTint="@color/color_btn_secundario"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1,2,3,4">
                <TableRow>
                    <TextView
                        android:text="@string/col_nombre"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:textColor="@color/color_texto"
                        android:textStyle="bold"
                        android:layout_column="1"/>

                    <TextView/>
                    <TextView
                        android:text="@string/col_cantidad"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:textColor="@color/color_texto"
                        android:textStyle="bold"
                        android:layout_column="1"/>

                    <TextView/>


                    <TextView
                        android:text="@string/col_total"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:textColor="@color/color_texto"
                        android:textStyle="bold"
                        android:layout_marginRight="5dp"
                        android:layout_column="1"/>

                    <TextView/>
                </TableRow>


            </TableLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewProductosPreCompra"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"/>

            <LinearLayout
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="80dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="20dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/color_texto"
                        android:text="@string/subTotal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"

                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/color_texto"
                        android:text="@string/Total"/>


                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="80dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="50dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/color_texto"
                        android:text="14.00"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/color_texto"
                        android:text="14.00"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_realizar_compra"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:text="@string/btn_realizar_compra"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="20sp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:padding="5dp"/>


        </LinearLayout>

    </LinearLayout>
</LinearLayout>